# django-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: settings.py
core/: models.py
user/: models.py
user/migrations/: 0001_initial.py
