[project]
name = "django-template"
version = "0.1.0"
description = "Django REST API template project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django==5.0.2",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "gunicorn==21.2.0",
    "whitenoise==6.9.0",
]

[tool.uv]
dev-dependencies = []
package = false
